# evaluationStabCS

./: .gitignore  1.txt  README.md  debug_video.py  main.py  pyproject.toml
src/: metrics_video_faster.py  trajectory.py  utils.py
src/vidstab/: VidStab.py  frame_queue.py
